remove something not good

--- a/notebook/CF_Recommendation_FastRP_KNN.ipynb
+++ b/notebook/CF_Recommendation_FastRP_KNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-26T07:20:01.190881900Z",
@@ -39,13 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eae943872f124393a02e01c0b1e9b9c2",
+       "model_id": "5494cf31a50047739648c94da073490f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,21 +69,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "FastRP KNN"
+    "## CF KNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<neo4j._sync.work.result.Result at 0x17eb3134c70>"
+       "<neo4j._sync.work.result.Result at 0x174658ca920>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,16 +105,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<neo4j._sync.work.result.Result at 0x187be23e590>"
+       "<neo4j._sync.work.result.Result at 0x174654596f0>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
      "output_type": "stream",
      "text": [
       "   nodesCompared  relationshipsWritten  meanSimilarity\n",
-      "0          10440                 52200        0.950769\n"
+      "0           9808                 49040        0.327103\n"
      ]
     }
    ],
@@ -168,24 +168,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   person1  person2  similarity\n",
-      "0  user126  user379    0.989860\n",
-      "1  user379  user126    0.989860\n",
-      "2  user242  user468    0.987524\n",
-      "3  user468  user242    0.987524\n",
-      "4  user130  user574    0.985089\n",
-      "5  user574  user130    0.985089\n",
-      "6  user379  user507    0.984774\n",
-      "7  user507  user379    0.984774\n",
-      "8  user150  user270    0.984757\n",
-      "9  user270  user150    0.984757\n"
+      "  person1 person2  similarity\n",
+      "0  user46  user56    0.970529\n",
+      "1  user56  user46    0.970529\n",
+      "2  user38   user8    0.970025\n",
+      "3   user8  user38    0.970025\n",
+      "4  user26  user56    0.969324\n",
+      "5  user56  user26    0.969324\n",
+      "6  user26  user37    0.964899\n",
+      "7  user37  user26    0.964899\n",
+      "8  user38  user58    0.963291\n",
+      "9  user58  user38    0.963291\n"
      ]
     }
    ],
@@ -208,51 +208,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   userId                                    movieTitle movieId  \\\n",
-      "0  user29                      Clear and Present Danger     349   \n",
-      "1  user29  Harry Potter and the Deathly Hallows: Part 1   81834   \n",
-      "2  user29                                    Black Swan   81591   \n",
-      "3  user29                                   Crazy Heart   73023   \n",
-      "4  user29                                        Avatar   72998   \n",
-      "5  user29                                      Invictus   72733   \n",
-      "6  user29                              Blind Side, The    72641   \n",
-      "7  user29                                 Up in the Air   72011   \n",
-      "8  user29                                Serious Man, A   71464   \n",
-      "9  user29        Harry Potter and the Half-Blood Prince   69844   \n",
-      "\n",
-      "                                   genres      similarUserIds  \n",
-      "0        [Action, Crime, Drama, Thriller]           [user590]  \n",
-      "1            [Action, Adventure, Fantasy]           [user590]  \n",
-      "2                       [Drama, Thriller]  [user590, user261]  \n",
-      "3                        [Romance, Drama]           [user590]  \n",
-      "4             [Action, Adventure, Sci-Fi]           [user590]  \n",
-      "5                                 [Drama]           [user590]  \n",
-      "6                                 [Drama]           [user590]  \n",
-      "7                        [Drama, Romance]           [user590]  \n",
-      "8                         [Drama, Comedy]           [user590]  \n",
-      "9  [Adventure, Fantasy, Mystery, Romance]           [user590]  \n"
+      "  userId                          movieTitle movieId similarUserIds\n",
+      "0  user5                             Jumanji       2        [user8]\n",
+      "1  user5                           GoldenEye      10        [user8]\n",
+      "2  user5             American President, The      11        [user8]\n",
+      "3  user5  Twelve Monkeys (a.k.a. 12 Monkeys)      32        [user8]\n",
+      "4  user5                Seven (a.k.a. Se7en)      47        [user8]\n",
+      "5  user5                       Birdcage, The     141        [user8]\n",
+      "6  user5                            Net, The     185        [user8]\n",
+      "7  user5                         Nine Months     186        [user8]\n",
+      "8  user5                          Waterworld     208        [user8]\n",
+      "9  user5     Dumb & Dumber (Dumb and Dumber)     231        [user8]\n"
      ]
     }
    ],
    "source": [
     "query = '''\n",
-    "MATCH (u:User {id: 'user29'})\n",
-    "MATCH (u)-[r1:SIMILAR]->(similarUser)-[r2:RATED]->(m:Movie)<-[:IS_GENRE_OF]-(genre:Genre)\n",
+    "MATCH (u:User {id: 'user5'})\n",
+    "MATCH (u)-[r1:SIMILAR]->(similarUser)-[r2:RATED]->(m:Movie)\n",
     "WHERE NOT EXISTS((u)-[:RATED]->(m))\n",
-    "RETURN u.id AS userId, m.title AS movieTitle, m.id AS movieId, COLLECT(DISTINCT genre.name) AS genres, COLLECT(DISTINCT similarUser.id) AS similarUserIds\n",
+    "RETURN u.id AS userId, m.title AS movieTitle, m.id AS movieId, COLLECT(DISTINCT similarUser.id) AS similarUserIds\n",
     "LIMIT 10\n",
     "'''\n",
     "result = session.run(query)\n",
-    "print(result.to_df())\n",
-    "# widget = GraphWidget(graph = result.graph(), overview_enabled=True)\n",
-    "# widget.show()"
+    "print(result.to_df())"
    ]
   },
   {
@@ -265,13 +251,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5965d2b640c4bf28e3575b3a43ed918",
+       "model_id": "9bdabc1533cb409391159c3d4e2feac0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -285,7 +271,7 @@
    ],
    "source": [
     "query = '''\n",
-    "MATCH (u:User {id: 'user29'})\n",
+    "MATCH (u:User {id: 'user5'})\n",
     "MATCH (u)-[r1:SIMILAR]->(similarUser)-[r2:RATED]->(m:Movie)\n",
     "WHERE NOT EXISTS((u)-[:RATED]->(m))\n",
     "RETURN u, similarUser, m, r1, r2\n",
@@ -306,46 +292,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  MovieId                                             genres  \\\n",
-      "0   73017                 [Action, Crime, Mystery, Thriller]   \n",
-      "1   68954                      [Adventure, Animation, Drama]   \n",
-      "2   69122                                    [Comedy, Crime]   \n",
-      "3   54286                          [Action, Crime, Thriller]   \n",
-      "4   72998                        [Action, Adventure, Sci-Fi]   \n",
-      "5  106696  [Romance, Musical, Fantasy, Comedy, Animation,...   \n",
-      "6  166643                                            [Drama]   \n",
-      "\n",
-      "              movieTitle     score  \n",
-      "0        Sherlock Holmes  0.965837  \n",
-      "1                     Up  0.964738  \n",
-      "2          Hangover, The  0.964345  \n",
-      "3  Bourne Ultimatum, The  0.962791  \n",
-      "4                 Avatar  0.962641  \n",
-      "5                 Frozen  0.951515  \n",
-      "6         Hidden Figures  0.929395  \n"
+      "  MovieId                                      movieTitle     score\n",
+      "0   91529                          Dark Knight Rises, The  0.984773\n",
+      "1   79132                                       Inception  0.971491\n",
+      "2   58559                                Dark Knight, The  0.969354\n",
+      "3  112852                         Guardians of the Galaxy  0.967343\n",
+      "4    7153  Lord of the Rings: The Return of the King, The  0.965962\n",
+      "5   60069                                          WALL·E  0.963464\n",
+      "6   58826                    Shepherd: Border Patrol, The  0.000000\n"
      ]
     }
    ],
    "source": [
     "query = '''\n",
-    "MATCH (targetMovie:Movie {id: '78499'})\n",
-    "MATCH (targetMovie)-[similarity:SIMILAR]-(similarMovie:Movie)<-[:IS_GENRE_OF]-(genre:Genre)\n",
+    "MATCH (targetMovie:Movie {id: '68954'})\n",
+    "MATCH (targetMovie)-[similarity:SIMILAR]-(similarMovie:Movie)\n",
     "WHERE similarMovie.id <> targetMovie.id\n",
-    "RETURN DISTINCT similarMovie.id AS MovieId, COLLECT(DISTINCT genre.name) AS genres, similarMovie.title AS movieTitle , similarity.score AS score\n",
+    "RETURN DISTINCT similarMovie.id AS MovieId, similarMovie.title AS movieTitle , similarity.score AS score\n",
     "ORDER BY similarity.score DESC\n",
     "LIMIT 10\n",
     "'''\n",
     "result = session.run(query)\n",
-    "print(result.to_df())\n",
-    "# widget = GraphWidget(graph = result.graph())\n",
-    "# widget.show()"
+    "print(result.to_df())"
    ]
   },
   {
@@ -358,13 +333,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e10db98684644dfb9b89605478b5509a",
+       "model_id": "74eb775041da4a4886c2dd344284d221",
        "version_major": 2,
        "version_minor": 0
       },
@@ -379,7 +354,7 @@
    "source": [
     "query = '''\n",
     "MATCH (targetMovie:Movie {id: '68954'})\n",
-    "MATCH (targetMovie)-[similarity:SIMILAR]-(similarMovie:Movie)<-[:IS_GENRE_OF]-(genre:Genre)\n",
+    "MATCH (targetMovie)-[similarity:SIMILAR]-(similarMovie:Movie)\n",
     "WHERE similarMovie.id <> targetMovie.id\n",
     "RETURN DISTINCT targetMovie, similarMovie, similarity\n",
     "ORDER BY similarity.score DESC\n",
@@ -400,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,36 +399,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  movieId                                         movieTitle     score  \\\n",
-      "0   69122                                      Hangover, The  0.053133   \n",
-      "1   72998                                             Avatar  0.048280   \n",
-      "2   68954                                                 Up  0.040258   \n",
-      "3   73017                                    Sherlock Holmes  0.039729   \n",
-      "4   54286                              Bourne Ultimatum, The  0.035928   \n",
-      "5   58559                                   Dark Knight, The  0.029241   \n",
-      "6   59315                                           Iron Man  0.026921   \n",
-      "7    6539  Pirates of the Caribbean: The Curse of the Bla...  0.023143   \n",
-      "8    5952             Lord of the Rings: The Two Towers, The  0.020266   \n",
-      "9    8961                                   Incredibles, The  0.019339   \n",
-      "\n",
-      "                                   genres  \n",
-      "0                         [Comedy, Crime]  \n",
-      "1             [Action, Adventure, Sci-Fi]  \n",
-      "2           [Adventure, Animation, Drama]  \n",
-      "3      [Action, Crime, Mystery, Thriller]  \n",
-      "4               [Action, Crime, Thriller]  \n",
-      "5                  [Action, Crime, Drama]  \n",
-      "6             [Action, Adventure, Sci-Fi]  \n",
-      "7    [Action, Adventure, Comedy, Fantasy]  \n",
-      "8                    [Adventure, Fantasy]  \n",
-      "9  [Action, Adventure, Animation, Comedy]  \n"
+      "  movieId                                      movieTitle     score\n",
+      "0   58559                                Dark Knight, The  0.076272\n",
+      "1   79132                                       Inception  0.069243\n",
+      "2    7153  Lord of the Rings: The Return of the King, The  0.068999\n",
+      "3   91529                          Dark Knight Rises, The  0.057266\n",
+      "4  112852                         Guardians of the Galaxy  0.046662\n",
+      "5   60069                                          WALL·E  0.028320\n",
+      "6  122900                                         Ant-Man  0.023766\n",
+      "7   89745                                   Avengers, The  0.023307\n",
+      "8   73017                                 Sherlock Holmes  0.019971\n",
+      "9   33794                                   Batman Begins  0.017938\n"
      ]
     }
    ],
@@ -470,12 +433,11 @@
     "    YIELD nodeId, score\n",
     "    WHERE gds.util.asNode(nodeId).id <> src1.id\n",
     "    WITH gds.util.asNode(nodeId) AS movie, score\n",
-    "    MATCH (movie)<-[:IS_GENRE_OF]-(genre:Genre)\n",
-    "    RETURN movie.id AS movieId, movie.title AS movieTitle, score, COLLECT(DISTINCT genre.name) AS genres\n",
+    "    RETURN movie.id AS movieId, movie.title AS movieTitle, score\n",
     "    ORDER BY score DESC\n",
     "    LIMIT $n;\n",
     "'''\n",
-    "result = session.run(query, movieid='78499', n=10)\n",
+    "result = session.run(query, movieid='68954', n=10)\n",
     "print(result.to_df())"
    ]
   }
