--- a/notebook/import_to_neo4j.ipynb
+++ b/notebook/import_to_neo4j.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,18 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_MOVIES = 1000\n",
-    "N_RATINGS = 1000\n",
-    "N_LINKS = 1000"
+    "N_MOVIES = 10000\n",
+    "N_RATINGS = 10000\n",
+    "N_LINKS = 10000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,30 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def createGenreNodes():\n",
-    "#     allGenres = [\"Action\", \"Adventure\", \"Animation\", \"Children's\", \"Comedy\", \"Crime\",\n",
-    "#                  \"Documentary\", \"Drama\", \"Fantasy\", \"Film-Noir\", \"Horror\", \"Musical\",\n",
-    "#                  \"Mystery\", \"Romance\", \"Sci-Fi\", \"Thriller\", \"War\", \"Western\"]\n",
-    "\n",
-    "#     for genre in allGenres:\n",
-    "#         gen = Node(\"Genre\", name=genre)\n",
-    "#         graph.create(gen)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +66,6 @@
     "        for i, row in enumerate(readCSV):\n",
     "\n",
     "            createMovieNodes(row)\n",
-    "            # createGenreMovieRelationships(row)\n",
-    "\n",
     "            if (i % 1000 == 0):\n",
     "                print(f\"{i}/{N_MOVIES} Movie nodes created\")\n",
     "\n",
@@ -114,26 +89,12 @@
     "        title = row[1][:-7]\n",
     "        genres = row[2]\n",
     "\n",
-    "        return (id, title, year, genres)\n",
-    "\n",
-    "# def createGenreMovieRelationships(row):\n",
-    "#     movieId = row[0]\n",
-    "#     movieGenres = row[2].split(\"|\")\n",
-    "\n",
-    "#     for movieGenre in movieGenres:\n",
-    "#         graph.run('MATCH (g:Genre {name: $genre}), (m:Movie {id: $movieId}) CREATE (g)-[:IS_GENRE_OF]->(m)',\n",
-    "#             genre=movieGenre, movieId=movieId)\n",
-    "        \n",
-    "# def parseRowGenreMovieRelationships(row):\n",
-    "#     movieId = row[0]\n",
-    "#     movieGenres = row[2].split(\"|\")\n",
-    "\n",
-    "#     return (movieId, movieGenres)"
+    "        return (id, title, year, genres)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +106,7 @@
     "             createUserNodes(row)\n",
     "             createRatingRelationship(row)\n",
     "\n",
-    "             if (i % 100 == 0):\n",
+    "             if (i % 1000 == 0):\n",
     "                 print(f\"{i}/{N_RATINGS} Rating relationships created\")\n",
     "\n",
     "             if (i >= N_RATINGS):\n",
@@ -172,42 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def loadTags():\n",
-    "#     with open('data/tags.csv', encoding='utf8') as csvfile:\n",
-    "#          readCSV = csv.reader(csvfile, delimiter=',')\n",
-    "#          next(readCSV, None) #skip header\n",
-    "#          for i,row in enumerate(readCSV):\n",
-    "#              createTagRelationship(row)\n",
-    "\n",
-    "#              if (i % 100 == 0):\n",
-    "#                  print(f\"{i}/{N_TAGS} Tag relationships created\")\n",
-    "\n",
-    "#              if (i >= N_TAGS):\n",
-    "#                  break\n",
-    "\n",
-    "# def createTagRelationship(row):\n",
-    "#     tagData = parseRowTagRelationships(row)\n",
-    "\n",
-    "#     graph.run(\n",
-    "#         'MATCH (u:User {id: $userId}), (m:Movie {id: $movieId}) CREATE (u)-[:TAGGED { tag: $tag, timestamp: $timestamp }]->(m)',\n",
-    "#         userId=tagData[0], movieId=tagData[1], tag=tagData[2], timestamp=tagData[3])\n",
-    "\n",
-    "# def parseRowTagRelationships(row):\n",
-    "#     userId = \"user\" + row[0]\n",
-    "#     movieId = row[1]\n",
-    "#     tag = row[2]\n",
-    "#     timestamp = row[3]\n",
-    "\n",
-    "#     return (userId, movieId, tag, timestamp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +145,7 @@
     "\n",
     "            updateMovieNodeWithLinks(row)\n",
     "\n",
-    "            if (i % 100 == 0):\n",
+    "            if (i % 1000 == 0):\n",
     "                print(f\"{i}/{N_LINKS} Movie nodes updated with links\")\n",
     "\n",
     "            # break after N_LINKS movies\n",
@@ -252,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -260,32 +186,39 @@
      "output_type": "stream",
      "text": [
       "Step 1 out of 3: loading movie nodes\n",
-      "0/1000 Movie nodes created\n",
-      "1000/1000 Movie nodes created\n",
+      "0/10000 Movie nodes created\n",
+      "1000/10000 Movie nodes created\n",
+      "2000/10000 Movie nodes created\n",
+      "3000/10000 Movie nodes created\n",
+      "4000/10000 Movie nodes created\n",
+      "5000/10000 Movie nodes created\n",
+      "6000/10000 Movie nodes created\n",
+      "7000/10000 Movie nodes created\n",
+      "8000/10000 Movie nodes created\n",
+      "9000/10000 Movie nodes created\n",
       "Step 2 out of 3: loading rating relationships\n",
-      "0/1000 Rating relationships created\n",
-      "100/1000 Rating relationships created\n",
-      "200/1000 Rating relationships created\n",
-      "300/1000 Rating relationships created\n",
-      "400/1000 Rating relationships created\n",
-      "500/1000 Rating relationships created\n",
-      "600/1000 Rating relationships created\n",
-      "700/1000 Rating relationships created\n",
-      "800/1000 Rating relationships created\n",
-      "900/1000 Rating relationships created\n",
-      "1000/1000 Rating relationships created\n",
+      "0/10000 Rating relationships created\n",
+      "1000/10000 Rating relationships created\n",
+      "2000/10000 Rating relationships created\n",
+      "3000/10000 Rating relationships created\n",
+      "4000/10000 Rating relationships created\n",
+      "5000/10000 Rating relationships created\n",
+      "6000/10000 Rating relationships created\n",
+      "7000/10000 Rating relationships created\n",
+      "8000/10000 Rating relationships created\n",
+      "9000/10000 Rating relationships created\n",
+      "10000/10000 Rating relationships created\n",
       "Step 3 out of 3: updating links to movie nodes\n",
-      "0/1000 Movie nodes updated with links\n",
-      "100/1000 Movie nodes updated with links\n",
-      "200/1000 Movie nodes updated with links\n",
-      "300/1000 Movie nodes updated with links\n",
-      "400/1000 Movie nodes updated with links\n",
-      "500/1000 Movie nodes updated with links\n",
-      "600/1000 Movie nodes updated with links\n",
-      "700/1000 Movie nodes updated with links\n",
-      "800/1000 Movie nodes updated with links\n",
-      "900/1000 Movie nodes updated with links\n",
-      "1000/1000 Movie nodes updated with links\n"
+      "0/10000 Movie nodes updated with links\n",
+      "1000/10000 Movie nodes updated with links\n",
+      "2000/10000 Movie nodes updated with links\n",
+      "3000/10000 Movie nodes updated with links\n",
+      "4000/10000 Movie nodes updated with links\n",
+      "5000/10000 Movie nodes updated with links\n",
+      "6000/10000 Movie nodes updated with links\n",
+      "7000/10000 Movie nodes updated with links\n",
+      "8000/10000 Movie nodes updated with links\n",
+      "9000/10000 Movie nodes updated with links\n"
      ]
     }
    ],
@@ -310,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,17 +253,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Failed to write data to connection IPv4Address(('localhost', 7687)) (IPv4Address(('127.0.0.1', 7687)))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "uri = \"bolt://localhost:7687\" \n",
     "user = \"neo4j\"  \n",
@@ -342,13 +267,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "635aed18785d46a493cdba8c011c26c4",
+       "model_id": "b57c41fe62534dcbac608b18649b0621",
        "version_major": 2,
        "version_minor": 0
       },
