--- a/notebook/import_to_neo4j.ipynb
+++ b/notebook/import_to_neo4j.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,30 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "N_MOVIES = 9742\n",
     "N_RATINGS = 100836\n",
-    "# N_TAGS = 9742\n",
-    "N_LINKS = 3683"
+    "N_LINKS = 3683\n",
+    "# N_MOVIES = 1000\n",
+    "# N_RATINGS = 1000\n",
+    "# N_LINKS = 1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N_MOVIES = 10000\n",
-    "N_RATINGS = 10000\n",
-    "N_LINKS = 10000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -186,39 +177,28 @@
      "output_type": "stream",
      "text": [
       "Step 1 out of 3: loading movie nodes\n",
-      "0/10000 Movie nodes created\n",
-      "1000/10000 Movie nodes created\n",
-      "2000/10000 Movie nodes created\n",
-      "3000/10000 Movie nodes created\n",
-      "4000/10000 Movie nodes created\n",
-      "5000/10000 Movie nodes created\n",
-      "6000/10000 Movie nodes created\n",
-      "7000/10000 Movie nodes created\n",
-      "8000/10000 Movie nodes created\n",
-      "9000/10000 Movie nodes created\n",
+      "0/9742 Movie nodes created\n",
+      "1000/9742 Movie nodes created\n",
+      "2000/9742 Movie nodes created\n",
+      "3000/9742 Movie nodes created\n",
+      "4000/9742 Movie nodes created\n",
+      "5000/9742 Movie nodes created\n",
+      "6000/9742 Movie nodes created\n",
+      "7000/9742 Movie nodes created\n",
+      "8000/9742 Movie nodes created\n",
+      "9000/9742 Movie nodes created\n",
       "Step 2 out of 3: loading rating relationships\n",
-      "0/10000 Rating relationships created\n",
-      "1000/10000 Rating relationships created\n",
-      "2000/10000 Rating relationships created\n",
-      "3000/10000 Rating relationships created\n",
-      "4000/10000 Rating relationships created\n",
-      "5000/10000 Rating relationships created\n",
-      "6000/10000 Rating relationships created\n",
-      "7000/10000 Rating relationships created\n",
-      "8000/10000 Rating relationships created\n",
-      "9000/10000 Rating relationships created\n",
-      "10000/10000 Rating relationships created\n",
-      "Step 3 out of 3: updating links to movie nodes\n",
-      "0/10000 Movie nodes updated with links\n",
-      "1000/10000 Movie nodes updated with links\n",
-      "2000/10000 Movie nodes updated with links\n",
-      "3000/10000 Movie nodes updated with links\n",
-      "4000/10000 Movie nodes updated with links\n",
-      "5000/10000 Movie nodes updated with links\n",
-      "6000/10000 Movie nodes updated with links\n",
-      "7000/10000 Movie nodes updated with links\n",
-      "8000/10000 Movie nodes updated with links\n",
-      "9000/10000 Movie nodes updated with links\n"
+      "0/100836 Rating relationships created\n",
+      "1000/100836 Rating relationships created\n",
+      "2000/100836 Rating relationships created\n",
+      "3000/100836 Rating relationships created\n",
+      "4000/100836 Rating relationships created\n",
+      "5000/100836 Rating relationships created\n",
+      "6000/100836 Rating relationships created\n",
+      "7000/100836 Rating relationships created\n",
+      "8000/100836 Rating relationships created\n",
+      "9000/100836 Rating relationships created\n",
+      "10000/100836 Rating relationships created\n"
      ]
     }
    ],
@@ -243,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,13 +247,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b57c41fe62534dcbac608b18649b0621",
+       "model_id": "09e53bc5f4b946ac829a29452e3a161a",
        "version_major": 2,
        "version_minor": 0
       },
