--- a/notebook/import_to_neo4j.ipynb
+++ b/notebook/import_to_neo4j.ipynb
@@ -198,7 +198,102 @@
       "7000/100836 Rating relationships created\n",
       "8000/100836 Rating relationships created\n",
       "9000/100836 Rating relationships created\n",
-      "10000/100836 Rating relationships created\n"
+      "10000/100836 Rating relationships created\n",
+      "11000/100836 Rating relationships created\n",
+      "12000/100836 Rating relationships created\n",
+      "13000/100836 Rating relationships created\n",
+      "14000/100836 Rating relationships created\n",
+      "15000/100836 Rating relationships created\n",
+      "16000/100836 Rating relationships created\n",
+      "17000/100836 Rating relationships created\n",
+      "18000/100836 Rating relationships created\n",
+      "19000/100836 Rating relationships created\n",
+      "20000/100836 Rating relationships created\n",
+      "21000/100836 Rating relationships created\n",
+      "22000/100836 Rating relationships created\n",
+      "23000/100836 Rating relationships created\n",
+      "24000/100836 Rating relationships created\n",
+      "25000/100836 Rating relationships created\n",
+      "26000/100836 Rating relationships created\n",
+      "27000/100836 Rating relationships created\n",
+      "28000/100836 Rating relationships created\n",
+      "29000/100836 Rating relationships created\n",
+      "30000/100836 Rating relationships created\n",
+      "31000/100836 Rating relationships created\n",
+      "32000/100836 Rating relationships created\n",
+      "33000/100836 Rating relationships created\n",
+      "34000/100836 Rating relationships created\n",
+      "35000/100836 Rating relationships created\n",
+      "36000/100836 Rating relationships created\n",
+      "37000/100836 Rating relationships created\n",
+      "38000/100836 Rating relationships created\n",
+      "39000/100836 Rating relationships created\n",
+      "40000/100836 Rating relationships created\n",
+      "41000/100836 Rating relationships created\n",
+      "42000/100836 Rating relationships created\n",
+      "43000/100836 Rating relationships created\n",
+      "44000/100836 Rating relationships created\n",
+      "45000/100836 Rating relationships created\n",
+      "46000/100836 Rating relationships created\n",
+      "47000/100836 Rating relationships created\n",
+      "48000/100836 Rating relationships created\n",
+      "49000/100836 Rating relationships created\n",
+      "50000/100836 Rating relationships created\n",
+      "51000/100836 Rating relationships created\n",
+      "52000/100836 Rating relationships created\n",
+      "53000/100836 Rating relationships created\n",
+      "54000/100836 Rating relationships created\n",
+      "55000/100836 Rating relationships created\n",
+      "56000/100836 Rating relationships created\n",
+      "57000/100836 Rating relationships created\n",
+      "58000/100836 Rating relationships created\n",
+      "59000/100836 Rating relationships created\n",
+      "60000/100836 Rating relationships created\n",
+      "61000/100836 Rating relationships created\n",
+      "62000/100836 Rating relationships created\n",
+      "63000/100836 Rating relationships created\n",
+      "64000/100836 Rating relationships created\n",
+      "65000/100836 Rating relationships created\n",
+      "66000/100836 Rating relationships created\n",
+      "67000/100836 Rating relationships created\n",
+      "68000/100836 Rating relationships created\n",
+      "69000/100836 Rating relationships created\n",
+      "70000/100836 Rating relationships created\n",
+      "71000/100836 Rating relationships created\n",
+      "72000/100836 Rating relationships created\n",
+      "73000/100836 Rating relationships created\n",
+      "74000/100836 Rating relationships created\n",
+      "75000/100836 Rating relationships created\n",
+      "76000/100836 Rating relationships created\n",
+      "77000/100836 Rating relationships created\n",
+      "78000/100836 Rating relationships created\n",
+      "79000/100836 Rating relationships created\n",
+      "80000/100836 Rating relationships created\n",
+      "81000/100836 Rating relationships created\n",
+      "82000/100836 Rating relationships created\n",
+      "83000/100836 Rating relationships created\n",
+      "84000/100836 Rating relationships created\n",
+      "85000/100836 Rating relationships created\n",
+      "86000/100836 Rating relationships created\n",
+      "87000/100836 Rating relationships created\n",
+      "88000/100836 Rating relationships created\n",
+      "89000/100836 Rating relationships created\n",
+      "90000/100836 Rating relationships created\n",
+      "91000/100836 Rating relationships created\n",
+      "92000/100836 Rating relationships created\n",
+      "93000/100836 Rating relationships created\n",
+      "94000/100836 Rating relationships created\n",
+      "95000/100836 Rating relationships created\n",
+      "96000/100836 Rating relationships created\n",
+      "97000/100836 Rating relationships created\n",
+      "98000/100836 Rating relationships created\n",
+      "99000/100836 Rating relationships created\n",
+      "100000/100836 Rating relationships created\n",
+      "Step 3 out of 3: updating links to movie nodes\n",
+      "0/3683 Movie nodes updated with links\n",
+      "1000/3683 Movie nodes updated with links\n",
+      "2000/3683 Movie nodes updated with links\n",
+      "3000/3683 Movie nodes updated with links\n"
      ]
     }
    ],
