feat: notebook title

--- a/notebook/CF_Recommendation_FastRP_KNN.ipynb
+++ b/notebook/CF_Recommendation_FastRP_KNN.ipynb
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CF KNN"
+    "### 1: Graph creation"
    ]
   },
   {
@@ -104,6 +104,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2: Node embedding"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -132,6 +140,14 @@
     ")\n",
     "YIELD nodePropertiesWritten\n",
     "''')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3: Node similarity with KNN"
    ]
   },
   {
@@ -164,6 +180,14 @@
     "RETURN nodesCompared, relationshipsWritten, similarityDistribution.mean as meanSimilarity\n",
     "''').to_df()\n",
     "print(result)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4: Explore the graph. Print similar users"
    ]
   },
   {
@@ -203,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Recommendation by user KNN"
+    "### 5: Make moive recommendations by user KNN"
    ]
   },
   {
@@ -287,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Recommendation by movie KNN"
+    "### 6: Recommendation by movie KNN"
    ]
   },
   {
@@ -370,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### PageRank Algorithm"
+    "#### 7: Recommendation by KNN + PageRank Algorithm"
    ]
   },
   {
