fix: add some bugs

--- a/notebook/CF_Recommendation_FastRP_KNN.ipynb
+++ b/notebook/CF_Recommendation_FastRP_KNN.ipynb
@@ -139,6 +139,7 @@
     "  }\n",
     ")\n",
     "YIELD nodePropertiesWritten\n",
+    "return nodePropertiesWritten\n",
     "''')"
    ]
   },
@@ -217,7 +218,7 @@
     "similar_user = session.run('''\n",
     "    MATCH (n:User)-[r:SIMILAR]->(m:User)\n",
     "    RETURN n.id as person1, m.id as person2, r.score as similarity\n",
-    "    ORDER BY similarity DESCENDING, person1, person2 limit 10\n",
+    "    ORDER BY similarity DESCENDING, person1, person2 limit 100\n",
     "''').to_df()\n",
     "print(similar_user)"
    ]
