--- a/notebook/CF_KNN.ipynb
+++ b/notebook/CF_KNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-26T07:20:01.190881900Z",
@@ -74,16 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<neo4j._sync.work.result.Result at 0x163dcc497e0>"
+       "<neo4j._sync.work.result.Result at 0x14841451c90>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<neo4j._sync.work.result.Result at 0x163f1765840>"
+       "<neo4j._sync.work.result.Result at 0x1482e90be50>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,16 +202,16 @@
      "text": [
       "    person1  person2  similarity\n",
       "0   user126  user379    0.989789\n",
-      "1   user126  user379    0.989789\n",
-      "2   user379  user126    0.989789\n",
-      "3   user379  user126    0.989789\n",
-      "4   user130  user574    0.987911\n",
+      "1   user379  user126    0.989789\n",
+      "2   user130  user574    0.987911\n",
+      "3   user574  user130    0.987911\n",
+      "4   user130  user468    0.985707\n",
       "..      ...      ...         ...\n",
-      "95  user340  user379    0.980332\n",
-      "96  user340   user81    0.980311\n",
-      "97  user340   user81    0.980311\n",
-      "98   user81  user340    0.980311\n",
-      "99   user81  user340    0.980311\n",
+      "95    user8   user94    0.978030\n",
+      "96   user56  user126    0.977922\n",
+      "97  user446    user8    0.977781\n",
+      "98    user8  user446    0.977781\n",
+      "99  user458  user470    0.977739\n",
       "\n",
       "[100 rows x 3 columns]\n"
      ]
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -248,12 +248,12 @@
       "1  user379        Silence of the Lambs, The     593\n",
       "2  user379              Legends of the Fall     266\n",
       "3  user379                         Clueless      39\n",
-      "4  user379             Beauty and the Beast     595\n",
-      "5  user379        Silence of the Lambs, The     593\n",
-      "6  user379              Legends of the Fall     266\n",
-      "7  user379                         Clueless      39\n",
-      "8  user379  Dumb & Dumber (Dumb and Dumber)     231\n",
-      "9  user379             Natural Born Killers     288\n"
+      "4  user379  Dumb & Dumber (Dumb and Dumber)     231\n",
+      "5  user379             Natural Born Killers     288\n",
+      "6  user379                        Quiz Show     300\n",
+      "7  user379           Star Trek: Generations     329\n",
+      "8  user379             Addams Family Values     410\n",
+      "9  user379                          Aladdin     588\n"
      ]
     }
    ],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -364,13 +364,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0c822a95c1249b1801ab4bce15c0a6c",
+       "model_id": "ec46e291e29444238c77861768b941d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -401,7 +401,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 7: Recommendation by KNN + PageRank Algorithm"
+    "#### 7: Recommendation for user PageRank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   nodePropertiesWritten  ranIterations\n",
+      "0                  10352              2\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = '''\n",
+    "CALL gds.pageRank.write('pagerank', {\n",
+    "  maxIterations: 20,\n",
+    "  dampingFactor: 0.85,\n",
+    "  writeProperty: 'pagerank'\n",
+    "})\n",
+    "YIELD nodePropertiesWritten, ranIterations\n",
+    "'''\n",
+    "result = session.run(query)\n",
+    "print(result.to_df())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                       recommendation  pagerank\n",
+      "0           Shawshank Redemption, The  0.715753\n",
+      "1                        Forrest Gump  0.665880\n",
+      "2                        Pulp Fiction  0.633543\n",
+      "3           Silence of the Lambs, The  0.597565\n",
+      "4                         Matrix, The  0.558928\n",
+      "5                          Braveheart  0.542864\n",
+      "6                    Schindler's List  0.522938\n",
+      "7  Star Wars: Episode IV - A New Hope  0.495535\n",
+      "8                       Jurassic Park  0.486429\n",
+      "9                           Apollo 13  0.481814\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = '''\n",
+    "// Retrieve the top-ranked movie recommendation for a specific user\n",
+    "MATCH (u:User {id: 'user127'})\n",
+    "\n",
+    "// Find unrated movies and their PageRank scores\n",
+    "MATCH (unratedMovie:Movie)\n",
+    "WHERE NOT EXISTS((u)-[:RATED]->(unratedMovie))\n",
+    "RETURN unratedMovie.title AS recommendation, unratedMovie.pagerank as pagerank\n",
+    "ORDER BY unratedMovie.pagerank DESC\n",
+    "LIMIT 10;\n",
+    "'''\n",
+    "result = session.run(query)\n",
+    "print(result.to_df())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 00: Recommendation by KNN + PageRank Algorithm"
    ]
   },
   {
